<resources>
    <string name="app_name">WayToGo</string>
    <string name="hello_world">Hello world!</string>
    <string name="country_code">SE</string>
    <string name="action_gift">Share</string>
    <string name="action_steeringwheel_inactive">Driver status pending</string>
    <string name="action_steeringwheel_active">Driver activated</string>
    <string name="action_search">Search Restaurants</string>
    <string name="action_cancel">Cancel Trip</string>
    <string name="overflow">Overflow</string>
    <string name="google_map_key">AIzaSyCPwk91qJXvCFn85WBT0Tdf0qHBuRtVlnw</string>
    <string name="facebook_app_id">297404737096624</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_home">Home</string>
    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Payment</item>
        <item>Drive for Ride</item>
        <item>Invite</item>
        <item>Settings</item>
        <item>Log out</item>
    </string-array>
    <string-array name="driver_cities">
        <item>Select your City</item>
        <item>San Francisco, California</item>
        <item>San Jose, California</item>
        <item>San Francisco Bay Area</item>
        <item>Los Angeles, CA</item>
        <item>Dallas, Texas</item>
        <item>Houston, Texas</item>
        <item>Austin, Texas</item>
        <item>More cities coming soon!</item>
    </string-array>
    <string-array name="bank_name">
        <item>Select your Bank</item>
        <item>Bank of America</item>
        <item>Wells Fargo</item>
        <item>Citibank</item>
        <item>Chase Bank</item>
        <item>Bank of the West</item>
    </string-array>
    <string name="strlogoimage">Logo image</string>
    <string name="strfblogin">Facebook login button</string>
    <string name="strphonelogin">Phone number login button</string>
    <string name="strConfirmPickup">Source location confirmation</string>
    <string name="strphoneverify">Button to verify phone number</string>
    <string name="strloginhint">Verification code sent to</string>
    <string name="edt_from_address">From Address</string>
    <string name="edt_to_address">Destination Address</string>
    <string name="edt_fname">First name</string>
    <string name="edt_lname">Last name</string>
    <string name="edt_email">Email address</string>
    <string name="edt_zipcode">Zipcode</string>
    <string name="edt_full_name">Legal Full Name</string>
    <string name="edt_security_number">Social Security Number</string>
    <string name="edt_dob">Date of Birth</string>
    <string name="edt_license_number">Driver\'s License Number</string>
    <string name="tv_profile_pic_title">Is the picture above the one you wish to send to us?</string>
    <string name="tv_vehicle_registration">Vehicle Registration</string>
    <string name="tv_vehicle_insurance">Vehicle Insurance</string>
    <string name="edt_licence_plate_number">Licence Plate Number</string>
    <string name="edt_vehicle_type">Type of Vehicle</string>
    <string name="edt_weight">Weight (lbs)</string>
    <string name="edt_search">Include any relevant notes to the driver (apartment #, building name, driving instructions, etc)</string>
    <string name="edt_paypal">PayPal E-Mail Address</string>
    <string name="edt_routing">Routing Number</string>
    <string name="edt_account">Account Number</string>
    <string name="tv_caption">Logga in for battre, sakrare och\nbilligare transport an vanlig Taxi</string>
    <string name="tv_terms">Terms</string>
    <string name="tv_help">Help</string>
    <string name="tv_phone_login">Enter your phone number</string>
    <string name="tv_phone_verification">Verify your mobile number</string>
    <string name="edt_number">Mobile Number</string>
    <string name="edt_code">Enter the verification code</string>
    <string name="title">Network connection error</string>
    <string name="message">Check your internet connection.</string>
    <string name="strgpsmessage">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="stryes">YES</string>
    <string name="strno">NO</string>
    <string name="strok">OK</string>
    <string name="strcancel">Cancel</string>
    <string name="strreport">Report</string>
    <string name="strsamelocation">Woops! both source location and destination location cannot be the same.</string>
    <string name="strnodriver">We couldn\'t find any drivers at the moment.. Please try again later</string>
    <string name="strgotit">OK, got it!</string>
    <string name="strvehicleregistrationalert">We require you to upload a picture of your vehicle registration. If you\'re driving a renta car, a picture of the rental agreement is sufficient.</string>
    <string name="strvehicleinsurancealert">We require you to upload a picture fo your insurance policy card. The card must show vehicle VIN, make &amp; year. If you\'re driving a rental car, you must attach a picture of the rental car insurance.</string>
    <string name="strdriveralert">Please allow 3 - 5 business days to process your application.</string>
    <string name="strdriverconfirm">Your application has been approved. Please tap the steering wheel that is located on the upper right corner and start driving today!</string>
    <string name="strdriverArrivedConfirmation">Are you sure that you want to mark this ride as picked up?</string>
    <string name="strdriverFoodConfirmation">Are you sure you got the right items that the user requested?</string>
    <string name="strdriverCompleteConfirmation">Is the Ride Completed?</string>
    <string name="strreporttitle">Report the driver</string>
    <string name="strreportmessage">Are you sure you want to report the driver? This report will be followed up on with one of our specalists.</string>
    <string name="strnegativebalance">You won\'t be allowed to book another trip until you\'ve cleared your balance: %1$s. Please contact support@rideapp.us for more information on how to clear this.</string>
    <string name="strdriveretatitle">Driver is closer than: %1$s mi aount of miles from you.</string>
    <string name="strdriveretamessage">The drivers name is: %1$s and he/she will be arriving in a %2$s, license plate: %3$s.</string>
    <string name="strcredicard">Please add a creditcard for your order. Cash is only available when you request a Ride</string>
    <string name="strcouriercashalert">Cash is not available for Courier</string>
    <string name="strTripCancel">Hello! This trip is cancelled. Thank you.</string>
    <string name="strnofooddriver">No food delivery drivers found at the moment, please try again later. Your card was not charged</string>
    <string name="strhelpmessage">For help or questions please contact support@rideapp.us</string>
    <string name="strdeletetripmessage">Are you sure to cancel the trip?</string>
    <string name="strlogoutMessage">Are you sure to logout?</string>
    <string name="strShare">I love Ride. They offer cheaper rides that Uber Lyft or Sidecar! Try it out for yourself: https://rideapp.us/download/</string>
    <string name="strVerificationSuccess">Thank you for verifying your phonenumber</string>
    <string name="strFnameEmpty">Enter your First name</string>
    <string name="strLnameEmpty">Enter your Last name</string>
    <string name="strEmailEmpty">Enter your Email-id</string>
    <string name="strEmailInvalid">Invalid Email-id</string>
    <string name="strAcceptTerms">Accept our terms and conditions</string>
    <string name="strRegisterSuccess">User registered successfully</string>
    <string name="strSourceLocationEmpty">Source location is empty</string>
    <string name="strDestinationLocationEmpty">Destination location is empty</string>
    <string name="strZipcodeEmpty">Enter the Zipcode</string>
    <string name="strAcceptDiscolsure">Accept the Disclosure and Authorization</string>
    <string name="strFullNameEmpty">Enter your legal full name</string>
    <string name="strDOBEmpty">Enter your Date of birth</string>
    <string name="strLicenseNumberEmpty">Enter the license plate number</string>
    <string name="strVehicleTypeEmpty">Enter the vehicle type</string>
    <string name="strRegistrationEmpty">Upload the registration image</string>
    <string name="strLicenseEmpty">Upload the license image</string>
    <string name="strRestaurantEmpty">Enter the Restaurant name</string>
    <string name="strAddCart">Please go back and add some items before checking out...</string>
    <string name="strCardRegisteredSuccess">Card Registered successfully</string>
    <string name="strinvalidemail">Please Enter Valid Email Address.</string>
    <string name="strroutingempty">Please Enter the Routing number.</string>
    <string name="straccountempty">Please Enter the Account number.</string>
    <string name="strbankempty">Please don\'t forget to select your bank.</string>
    <string name="strpaypalsuccess">Thank you for successfully submitting your payout details.</string>
    <string name="strbanksuccess">Thank you for successfully submitting your bank account details.</string>
    <string name="strnofood">Food is not yet available in Sweden. Hold your eyes open!</string>
    <string name="btn_pick">Set pickup</string>
    <string name="btn_destination">Set Destination</string>
    <string name="tv_from">From:</string>
    <string name="tv_to">To:</string>
    <string name="tv_pick_from">Pickup From:</string>
    <string name="tv_food_to">Deliver To:</string>
    <string name="cb_terms">Agree to terms</string>
    <string name="tv_take_picture">Take Picture</string>
    <string name="tv_upload_picture">Upload Picture</string>
    <string name="tv_pick_location">CONFIRM PICKUP LOCATION</string>
    <string name="tv_uber_label">Lyft / Uber</string>
    <string name="tv_profit_label">Thats right!\nNothing is taken out\nfrom your profit</string>
    <string name="edt_referral">Referral code (optional)</string>
    <string name="tv_disclosure_title">Disclosure and authorization</string>
    <string name="cb_agree">I consent, authorize, agree and have reviewed and understood</string>
    <string name="tv_vehicle_pic_title">Once last thing..</string>
    <string name="tv_vehicle_pic">A picture of your vechicle</string>
    <string name="strUploaded">Uploaded successfully</string>
    <string name="tv_waiting_driver">Waiting for the driver</string>
    <string name="tv_cancel_driver">Tap to cancel</string>
    <string name="tv_tap_accept">Tap to accept</string>
    <string name="btn_arrived">Tap if arrived</string>
    <string name="btn_complete">Tap if complete</string>
    <string name="tv_payment_title">CASH PAYMENT</string>
    <string name="tv_payment_snippet">Please ask the user to pay before the proceeding</string>
    <string name="tv_payment_continue">Continue</string>
    <string name="tv_payment_tap_continue">Tap to continue</string>
    <string name="tv_completed_title">Completed Trip!</string>
    <string name="tv_earnings">Earnings: #12.50</string>
    <string name="tv_earnings_total">Total: $755.80</string>
    <string name="tv_complete_tap_continue">Tap to continue</string>
    <string name="tv_receipt">Receipt</string>
    <string name="tv_report_driver">Report Driver</string>
    <string name="tv_estimated_weight">Enter the estimated weight</string>
    <string name="tv_payment_method">Payment method</string>
    <string name="tv_item_label">Item:</string>
    <string name="tv_cost_label">Cost:</string>
    <string name="tv_qty_label">Qty:</string>
    <string name="tv_del_label">Del:</string>
    <string name="tv_no_card_registered">No card registered</string>
    <string name="tv_default">Default</string>
    <string name="tv_add_payment">Add payment method</string>
    <string name="tv_payment_options">Paypal, Android Pay &amp; Bitcoin coming soon..</string>
    <string name="tv_card_register">Card</string>
</resources>