<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rider.MainActivity" >

    <item
        android:id="@+id/action_steeringwheel_active"
        android:icon="@drawable/ic_steeringwheel_active"
        android:orderInCategory="100"
        android:title="@string/action_steeringwheel_active"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        android:title="@string/overflow"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_cancel"
                android:showAsAction="never"
                android:title="@string/action_cancel"/>
        </menu>
    </item>

</menu>