<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#FFAA00"
    android:paddingBottom="10dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.4"
        android:text="@string/tv_item_label"
        android:textColor="@color/white"
        android:paddingLeft="5dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/tv_qty_label"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/tv_cost_label"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/tv_del_label"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>