<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical"
    tools:context="com.rider.MainActivity" >

    <TextView
        android:id="@+id/tv_payment_method"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/tv_payment_method"
        android:textColor="@color/tv_label"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/rl_registered_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_payment_method"
        android:background="#FFFFFF"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/iv_card_type"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_credit_card" />

        <TextView
            android:id="@+id/tv_last_four_digits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_card_type"
            android:text="@string/tv_no_card_registered"
            android:textColor="@color/tv_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_last_four_digits"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_card_type"
            android:text="@string/tv_default"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_add_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/tv_add_payment"
        android:textColor="@color/tv_label"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_card_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_add_payment"
        android:layout_marginTop="50dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/tv_card_register"
        android:textColor="@color/tv_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tv_card_register"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:background="@color/tv_label" />

    <TextView
        android:id="@+id/tv_payment_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/tv_payment_options"
        android:textColor="@color/tv_label"
        android:textSize="14sp" />

</RelativeLayout>