<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.rider.PhoneLoginActivity" >

    <TextView
        android:id="@+id/tv_caption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawablePadding="20dp"
        android:drawableTop="@drawable/ic_phone_icon"
        android:gravity="center_horizontal"
        android:text="@string/tv_phone_login"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/edt_number"
        android:inputType="number" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:contentDescription="@string/strphoneverify"
        android:src="@drawable/ic_btn_next" />

</LinearLayout>