<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.rider.PhoneLoginActivity" >

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/iv_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_placeholder"
        app:civ_border="true"
        app:civ_border_color="@color/circular_border"
        app:civ_border_width="2dp"
        app:civ_shadow="true" />

    <EditText
        android:id="@+id/edt_fname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/edt_fname"
        android:inputType="text" />

    <EditText
        android:id="@+id/edt_lname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_fname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/edt_lname"
        android:inputType="text" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_lname"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress" />

    <CheckedTextView
        android:id="@+id/cb_terms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"
        android:clickable="true"
        android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
        android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:hint="@string/cb_terms" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:contentDescription="@string/strphonelogin"
        android:src="@drawable/ic_btn_next" />

</RelativeLayout>