<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@drawable/ic_profile_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp" >

        <TextView
            android:id="@+id/tv_vehicle_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_edittext_bg"
            android:drawableLeft="@drawable/ic_camera"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_camera"
            android:gravity="center_vertical"
            android:text="@string/tv_vehicle_registration" />

        <TextView
            android:id="@+id/tv_vehicle_insurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_vehicle_registration"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_edittext_bg"
            android:drawableLeft="@drawable/ic_camera"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_camera"
            android:gravity="center_vertical"
            android:text="@string/tv_vehicle_insurance" />

        <EditText
            android:id="@+id/edt_licence_plate_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_vehicle_insurance"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_edittext_bg"
            android:hint="@string/edt_licence_plate_number"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp" />

        <EditText
            android:id="@+id/edt_vehicle_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_licence_plate_number"
            android:background="@drawable/ic_edittext_bg"
            android:hint="@string/edt_vehicle_type"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp" />

        <ImageButton
            android:id="@+id/btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:contentDescription="@string/strphonelogin"
            android:src="@drawable/ic_complete" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_vehicle_pic"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#DDFFFFFF"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_vehicle_pic_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_vehicle_pic"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/tv_vehicle_pic_title"
            android:textColor="@color/tv_label"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_vehicle_pic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_vehicle_pic_title"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawablePadding="15dp"
            android:drawableTop="@drawable/ic_vehicle_pic"
            android:gravity="center"
            android:text="@string/tv_vehicle_pic"
            android:textColor="@color/tv_label"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:contentDescription="@string/strphonelogin"
            android:src="@drawable/ic_take_a_picture" />
    </RelativeLayout>

</RelativeLayout>