<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_bg"
    tools:context="com.rider.PhoneLoginActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true" >

        <ImageButton
            android:id="@+id/btnFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/strfblogin"
            android:src="@drawable/ic_login_fb" />

        <ImageButton
            android:id="@+id/btnPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnFB"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:contentDescription="@string/strphonelogin"
            android:src="@drawable/ic_login_phone" />

        <LinearLayout
            android:id="@+id/ll_terms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPhoneNumber"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight=".5"
                android:gravity="end"
                android:text="@string/tv_terms" />

            <TextView
                android:id="@+id/tv_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight=".5"
                android:text="@string/tv_help" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>